# spin-rust-sdk

./: .gitignore  Cargo.toml  MAINTAINERS.md  README.md  release-process.md
.github/workflows/: build-examples.yml  build.yml  examples.yml  release.yml
crates/executor/: Cargo.toml  README.md  io.wit
crates/executor/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/macro/wit/: world.wit
examples/: Cargo.toml
examples/hello-world/: Cargo.toml  spin.toml
examples/hello-world/src/: lib.rs
examples/http-outbound/: spin.toml
examples/http-outbound/outbound-http/: Cargo.toml
examples/http-router/: spin.toml
examples/http-router-macro/: spin.toml
examples/http-rust/: Cargo.toml  spin.toml
examples/http-rust-outbound-http/: spin.toml
examples/http-rust-outbound-http/http-hello/: Cargo.toml
examples/http-rust-outbound-http/outbound-http-to-same-app/: Cargo.toml
examples/http-rust-router/: Cargo.toml  spin.toml
examples/http-rust-router-macro/: Cargo.toml
examples/json-http/: Cargo.toml  spin.toml
examples/json-http-rust/: Cargo.toml  spin.toml
examples/key-value/: Cargo.toml  spin.toml
examples/mqtt-outbound/: Cargo.toml  spin.toml
examples/mqtt-outbound/src/: lib.rs
examples/mysql/: Cargo.toml  spin.toml
examples/postgres/: Cargo.toml  README.md  spin.toml
examples/postgres-v3/: Cargo.toml  README.md  spin.toml
examples/postgres-v3/db/: testdata.sql
examples/postgres-v3/src/: lib.rs
examples/postgres/db/: testdata.sql
examples/postgres/src/: lib.rs
examples/redis/: Cargo.toml  spin.toml
examples/redis-async/: spin.toml
examples/redis-outbound/: spin.toml
examples/redis-rust/: Cargo.toml  spin.toml
examples/redis-rust-async/: Cargo.toml  spin.toml
examples/redis-rust-async/src/: lib.rs
examples/rust-key-value/: Cargo.toml  spin.toml
examples/rust-outbound-mysql/: Cargo.toml  spin.toml
examples/rust-outbound-pg/: Cargo.toml  spin.toml
examples/rust-outbound-redis/: Cargo.toml
examples/variables/: Cargo.toml  spin.toml
examples/variables-rust/: Cargo.toml  spin.toml
examples/wasi-http-rust-streaming-outgoing-body/: Cargo.toml
examples/wasi-http-rust-streaming-outgoing-body/src/: lib.rs
examples/wasi-http-streaming-file/: Cargo.toml  spin.toml
examples/wasi-http-streaming-file/src/: lib.rs
examples/wasi-http-streaming-outgoing-body/: spin.toml
macro/: Cargo.toml
macro/src/: lib.rs
macro/wit/: redis-types.wit
scripts/: build_examples.sh
src/: http.rs  key_value.rs  lib.rs  llm.rs  pg.rs  pg3.rs  sqlite.rs  test.rs
src/http/: conversions.rs  executor.rs  router.rs
test-cases/simple-http/: Cargo.toml
test-cases/simple-http/src/: lib.rs
test-cases/simple-redis/: Cargo.toml
test-cases/simple-redis/src/: lib.rs
wit/: mqtt.wit  observe.wit  world.wit
