[package]
name = "spin-sdk"
version = "3.0.0-pre0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://developer.fermyon.com/spin/v2/rust-components"
repository = "https://github.com/fermyon/spin-rust-sdk"
documentation = "https://docs.rs/spin-sdk"
rust-version = "1.73"
readme = "README.md"

description = """
The Spin Rust SDK makes it easy to build Spin components in Rust.
"""

[lib]
name = "spin_sdk"

[dependencies]
anyhow = "1"
async-trait = "0.1.74"
form_urlencoded = "1.0"
spin-macro = { version = "3.0.0-pre0", path = "macro" }
thiserror = "1.0.37"
wit-bindgen = "0.16.0"
routefinder = "0.5.3"
once_cell = "1.18.0"
futures = "0.3.28"
bytes = "1"
hyperium = { package = "http", version = "1.0.0" }
serde_json = { version = "1.0.96", optional = true }
serde = { version = "1.0.163", optional = true }

[features]
default = ["export-sdk-language", "json"]
export-sdk-language = []
json = ["dep:serde", "dep:serde_json"]
