[workspace]
resolver = "2"
members = [
  "hello-world",
  "http-outbound/http-hello",
  "http-outbound/outbound-http",
  "http-outbound/outbound-http-to-same-app",
  "http-router",
  "http-router-macro",
  "json-http",
  "redis",
  "redis-async",
  "key-value",
  "mysql",
  "postgres",
  "redis-outbound",    
  "variables",
  "wasi-http-streaming-outgoing-body",
  "wasi-http-streaming-file",
]

