[package]
name = "spin-macro"
version = "3.0.0-pre0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://developer.fermyon.com/spin/v2/rust-components"
repository = "https://github.com/fermyon/spin-rust-sdk"
documentation = "https://docs.rs/spin-macro"
rust-version = "1.73"
readme = "README.md"

description = """
Rust procedural macros for Spin and associated WIT files
"""

[lib]
name = "spin_macro"
proc-macro = true

[dependencies]
anyhow = "1"
bytes = "1"
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ]}
