[package]
name = "spin-macro"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/spin-macro"
readme = "README.md"

description = """
Rust procedural macros for Spin and associated WIT files
"""

[lib]
name = "spin_macro"
proc-macro = true

[dependencies]
anyhow = "1"
bytes = "1"
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ]}
